Se agregan todos los archivos HTML del curso-1

--- a/.gitignore
+++ b/.gitignore
@@ -616,3 +616,8 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,visualstudio,visualstudiocode
+
+#imagenes
+.assets
+.icons
+.logos
